<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">myLock utilities</string>

<string name="enabled">Quick unlock is enabled</string>
<string name="disabled">Quick unlock is disabled</string>

<string name="guard_on">Lockscreen shown on slider wake</string>
<string name="guard_off">Always Auto Unlock</string>

<string name="auto_on">Always Auto Unlock</string>
<string name="auto_off">Auto unlock ONLY on slider wake</string>

<string name="fg_on">Notification will be displayed</string>
<string name="fg_off">Ongoing notification is disabled</string>

<string name="howto_title">How to use myLock</string>
<string name="HowToFull">Quick unlock removes the need to slide to unlock. The lockscreen still exists but it will be automatically unlocked in your preferred cases. The side buttons remain locked down, but waking the phone with the slider, keypad buttons, or power key will allow auto unlock.
</string>

<string name="ts_title">Problem Help</string>
<string name="Troubleshooting">Please see our faq and troubleshooting pages linked on our site (http://mylockandroid.blogspot.com) first. If you notice an issue that happens consistently, download Log Collector (free from the market) to email us at myLockandroid@gmail.com. Be sure to list the problem symptoms and what other services are running in the Settings->Applications->Running Services screen. I will research the cause of the trouble and code a fix when possible. I am not responsible for issues that occur because of task killer apps. These are not recommended for android 2.0 and newer because android now has automatic task management.</string>

</resources>
