<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="Status" android:key="statusinfo">
<CheckBoxPreference
android:key="enabled"
android:summary="you can also view status and toggle via the homescreen widget"
android:disableDependentsState="true"
android:persistent="true"
/>

</PreferenceCategory>
<!-- category does nothing, just a cosmetic divider. 
useful in this case since I want users to know it is the Mode and that they can change it
but i need all the text in the pref itself to explain the mode-->

<PreferenceCategory android:title="Options" android:key="options">
<CheckBoxPreference android:key="slideGuard" android:title="Lock Slider Wake"
	android:summaryOn="@string/guard_on" android:summaryOff="@string/guard_off"
	android:persistent="true"/>
<CheckBoxPreference android:key="FG" android:title="Status Icon"
	android:summaryOn="@string/fg_on" android:summaryOff="@string/fg_off"
	android:persistent="true"/>
	</PreferenceCategory>
<PreferenceCategory android:title="Info" android:key="helpinfo">
        <i4nc4mp.myLock.MainDialogPreference
                android:key="howto" android:title="@string/howto_title" android:src="@drawable/icon"
                android:dialogTitle="@string/howto_title" android:dialogMessage="@string/HowToFull"
                android:dialogIcon="@drawable/icon" android:negativeButtonText="@null"/>
        <i4nc4mp.myLock.MainDialogPreference
                android:key="problem" android:title="@string/ts_title" android:src="@drawable/icon"
                android:dialogTitle="@string/ts_title" android:dialogMessage="@string/Troubleshooting"
                android:dialogIcon="@drawable/icon" android:negativeButtonText="@null" />
                </PreferenceCategory>
</PreferenceScreen>